--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,33 @@
+<% @products.each do |product| %>
+  name: <%= product.name %><br>
+  <div id="product-<%= product.id %>">
+    description: <%= truncate product.description %>
+  </div>
 
+  <div class="">
+    <button type="button" class="js-more" data-id="<%= product.id %>">More info</button>
+  </div>
+<% end %>
+
+
+<script type="text/javascript">
+  $(function(){
+    $('.js-more').on('click', function(e){
+      e.preventDefault();
+      var id = $(this).data('id');
+      $.get('/products/' + id + '/description', function(description){
+        $.get('/products/' + id + '/inventory', function(inventory){
+          var inventoryText = "<strong>Available</strong>"
+          
+          if(inventory === "false"){
+            inventoryText = "<strong>Sold Out</strong>"
+          }
+          var descriptionText = "<p>" + description + "</p><p>" + inventoryText + "</p>";
+          //bind to html
+          $("#product-" + id).html(descriptionText);
+        })
+      })
+    })
+  });
+
+</script>
