--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,1 +1,11 @@
+<h1>New Product</h1>
+<%= form_for @product do |f| %>
+  <%= f.text_field :name %>
+  <br>
+  <%= f.text_field :description %>
+  <br>
+  <%= f.text_field :inventory %>
+  <br>
+  <%= f.submit "submit" %>
 
+<% end %>
