--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,26 @@
+<% @products.each do |product| %>
+  <%= render partial: "product", locals: {product: product} %>
+<% end %>
 
+<script type="text/javascript" charset="utf-8">
+$(function () {
+  $(".js-more").on('click', function() {
+    var id = $(this).data("id");
+    $.get("/products/" + id + "/description", function(data) {
+      // Replace text of body-id div
+      $("#body-" + id).text(data);
+    });
+    $.get("/products/" + id + "/inventory", function(data) {
+    	var availability
+    	var currentText = $("#body-" + id).text()
+      // Replace text of body-id div
+      if (data == "true") {
+      	availability = "Available"
+      } else {
+      	availability = "Sold Out"
+      }
+      $("#body-" + id).html(currentText + '<br>' + availability);
+    });
+  });
+});
+</script>
