--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,30 @@
 
+<%@products.each do |p|%>
+<h1> <%= p.name %></h1>
+
+<div id="body-<%= p.id %>"><p><%=truncate p.description%></p></div>
+
+<button class="js-more" data-id="<%= p.id %>">More Info</button>
+
+<%end%>
+
+
+
+<script type="text/javascript" charset="utf-8">
+$(function () {
+  $(".js-more").on('click', function() {
+    var id = $(this).data("id");
+    $.get("/products/" + id + "/description", function(description) {
+    $.get("/products/" + id + "/inventory", function(inventory) {
+      var inventoryText = "<strong>Available</strong>";
+       if(inventory === "false"){
+         inventoryText = "<strong>Sold Out</strong>";
+       }
+       var descriptionText = "<p>" + description + "</p><p>" + inventoryText + "</p>";
+       $("#body-" + id).html(descriptionText);
+    
+      });
+    });
+  });
+});
+</script>
