--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,35 @@
+<% @products.each do |product| %>
+  <h2><%= product.name %></h2>
+  <div id="body-<%=product.id%>">
+    <p>Desc: <%= truncate product.description %></p>
+  </div>
+  <button class="js-more" data-id="<%= product.id %>">More Info</button>
+<% end %>
 
+<script type="text/javascript" charset="utf-8">
+$(function () {
+  $(".js-more").on('click', function() {
+    // get the id from the data attribute
+    var id = $(this).data("id");
+    // Get the full description
+    //alert(id);
+    $.get("/products/" + id + "/description", function(data) {
+      alert(data);
+      // Replace text of body-id div
+      $("#body-" + id).text(data);
+    });
+    // Get the inventory
+    $.get("/products/" + id + "/inventory", function(data) {
+      //alert(data);
+      // Replace text of body-id div
+      if( data === "true" ) {
+        $("#body-" + id).append("<p>Available</p>");
+      }
+      else {
+        $("#body-" + id).append("<p>Sold Out</p>");
+      }
+    });
+
+  });
+});
+</script>
