--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,4 +4,6 @@
     <p><%= i+1 %>. <%= p.name %></p>
     <%= p.description %>
     <%end%>
-</div>
+</div><br>
+
+<%= button_to "New Product",new_product_path %>
