--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,21 @@
+<% @products.each do |product| %>
+  <%= render partial: 'product', locals: { product: product} %>
+<% end %>
 
+<script type="text/javascript" charset="utf-8">
+  $(function() {
+    $(".js-more").on('click', function() {
+      var id = $(this).data("id")
+      $.get("/products/" + id + "/description", function(data) {
+        $("#description-" + id).text(data)
+        $.get("/products/" + id + "/inventory", function(data) {
+            var status = "Sold Out"
+            if(data === 'true') {
+              status = "Available"
+            }
+            $("#inventory-" + id).text(status)
+        });
+      });
+    });
+  });
+</script>
