--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,24 @@
+<% @products.each do |product| %>
+<h1><%= product.name %></h1><br>
 
+<div id="description- <% product.id %> "><%= truncate product.description %></div>
+<div id="inventory- <%= product.id %> "></div>
+<p> <button class="js-more" data-id=" <%= product.id %> ">More Info</button> </p>
+<% end %>
+<script type="text/javascript">
+  $(function() {
+    $(".js-more").on("click", function(){
+      var id = $(this).data("id")
+      $.get("/products/"+id+"/description", function(data) {
+        $("#description-"+id).text(data)
+      })
+      $.get("/products/"+id+"/inventory", function(data){
+        if(data === "true"){
+          $("#inventory-"+id).text("Available")
+        } else {
+          $("#inventory-"+id).text("Sold Out")
+        }
+      })
+    })
+  })
+</script>
