--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,23 @@
+<%= content_tag :h1, "Products" %>
+<%= div_for @products do |product| %>
+  <p>
+    <%= product.name %>
+  </p>
+  <p id="body-<%=product.id%>">
+    <%= truncate product.description %>
+  </p>
+  <p>
+    <%= button "More Info", class: 'js-more' %>
+  </p>
+<% end %>
 
+<script type="text/javascript" charset="utf-8">
+  $(function(){
+    $(".js-more").on('click', function(){
+      var id = $(this).data('id');
+      $.get("/products/" + id + "/description", function(data) {
+      $("#body-" + id).text(data);
+    });
+    });
+  });
+</script>
