--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,23 +1,30 @@
 <%= content_tag :h1, "Products" %>
 <%= div_for @products do |product| %>
-  <p>
+  <div>
     <%= product.name %>
-  </p>
-  <p id="body-<%=product.id%>">
+  </div>
+  <div class="body">
     <%= truncate product.description %>
-  </p>
-  <p>
+  </div>
+  <div>
     <%= button "More Info", class: 'js-more' %>
-  </p>
+  </div>
 <% end %>
 
 <script type="text/javascript" charset="utf-8">
   $(function(){
     $(".js-more").on('click', function(){
-      var id = $(this).data('id');
-      $.get("/products/" + id + "/description", function(data) {
-      $("#body-" + id).text(data);
-    });
+      var p_class = $(this).attr('class');
+      var p_id = p_class.replace("product_", "")
+
+      $("#product-" + p_id).text("");
+      $.get("/products/" + p_id + "/description", function(resp) {
+        $(p_class+" div.body").append(resp);
+      });
+      $.get("/products/" + p_id + "/inventory", function(resp) {
+        $(p_class+" div.body").append(resp);
+      });
+
     });
   });
 </script>
