--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,23 @@
+<h2>Products</h2>
 
+<% @products.each do |product| %>
+  <%= render partial: 'product', locals: {product: product} %>
+<% end %>
+
+<script type="text/javascript" charset="utf-8">
+$(function(){
+  $(".js-more").on("click", function(){
+    const id = $(this).data("id");
+    $.get("/products/" + id + "/description", function(data){
+      $("#description-" + id).text(data);
+    })
+    $.get("/products/" + id + "/inventory", function(data){
+      if (data === "true"){
+        $("#inventory-" + id).text("Available");
+      } else {
+        $("#inventory-" + id).text("Sold Out");
+      }
+    })
+  })
+})
+</script>
