--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,21 @@
+<% @products.each do |product| %>
+  <%= render partial: "product", locals: {product: product} %>
+<% end %>
+
+<script type="text/javascript" charset="utf-8">
+$(function () {
+  $(".js-more").on('click', function() {
+    // get the id from the data attribute
+    let id = $(this).data("id");
+    $.get("/products/" + id + "/description", function(description) {
+      $.get("/products/" + id + "/inventory", function(inventory) {
+        var inventoryText = (inventory === "true") ? "Available" : "Sold Out" ;
+        var descriptionText = "<p>" + description + "</p><p><strong>" + inventoryText + "</strong></p>";
+        $("#body-" + id).html(descriptionText);
+      });
+    });
+  });
+});
+</script>
+
 
