--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,28 @@
+<% @products.each do |p| %>
+    <h3><%= p.name %></h3>
+    <div id="body-<%= p.id %>"><%= truncate p.description %></div>
+    <button class="js-more" data-id="<%= p.id %>">More Info</button>
+<% end %>
 
+<script type="text/javascript" charset="utf-8">
+$(function () {
+  $(".js-more").on('click', function() {
+    var id = $(this).data("id");
+
+    $.get("/products/" + id + "/description", function(data) {
+      $("#body-" + id).text(data);
+    });
+
+    $.get("/products/" + id + "/inventory", function(data) {
+        var available = "";
+        if (data == "true"){
+            available = "Available"
+        } else {
+            available = "Sold Out"
+        }
+        $("#body-" + id).append(" " + available);
+      });
+
+  });
+});
+</script>
