--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,1 +1,7 @@
-
+<%=form_for @product do |f|%>
+    Name:<%= f.text_field :name %>
+    Description:<%= f.text_field :description %>
+    Price:<%= f.text_field :price %>
+    Inventory:<%= f.number_field :inventory %>
+    <%= f.submit %>
+<% end %>
