--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,22 @@
+<% @products.each do |product| %>
+  <%= render partial: "product", locals: {product: product} %>
+<% end %>
 
+<script type="text/javascript" charset="utf-8">
+$(function () {
+  $(".js-more").on('click', function() {
+    let id = $(this).data("id");
+    $.get("/products/" + id + "/description", function(data) {
+      // Replace text of body-id div
+      $("#body-" + id).text(data);
+    });
+    $.get("/products/" + id + "/inventory", function(data) {
+      if (data === "true") {
+        $("#body-" + id).append(" - Available");
+      } else {
+        $("#body-" + id).append(" - Sold Out");
+      }
+    });
+  });
+});
+</script>
