--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,26 @@
 
+<% @products.each do |product| %>
+  <h1><%= product.name %></h1>
+  <div id="product-<%= product.id %>">
+    <%= truncate product.description %>
+  </div>
+  <button class="js-more" data-id="<%= product.id %>">More Info</button>
+<% end %>
+
+<script>
+  $(function() {
+    $(".js-more").on('click', function() {
+      let id = $(this).data("id");
+      $.get("/products/" + id + "/description", function(description) {
+        $.get("/products/" + id + "/inventory", function(inventory) {
+          var inventoryText = "<strong>Available</strong>"
+          if(inventory === "false") {
+            inventoryText = "<strong>Sold out</strong>"
+          }
+          var descriptionText = "<p>" + description + "</p><p>" + inventoryText + "</p>";
+          $("#product-" + id).html(descriptionText)
+        });
+      });
+    });
+  });
+</script>
