--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,1 +1,12 @@
+<%= form_for(@product) do |f| %>
+  <%= f.label 'Name' %>
+  <%= f.text_field :name %>
 
+  <%= f.label 'Description' %>
+  <% f.text_area :description %>
+
+  <%= f.label 'Inventory Count' %>
+  <%= f.text_field :inventory %>
+
+  <%= f.submit 'Create Product' %>
+<% end %>
